--- a/Module-42_5-Browser-API-Conceptual-Practice/type-monster/styles.css
+++ b/Module-42_5-Browser-API-Conceptual-Practice/type-monster/styles.css
@@ -63,8 +63,8 @@ body {
 }
 #result {
   position: fixed;
-  top: 10%; 
-  left: 10%;
+  top: 50%; 
+  left: 50%;
   transform: translate(-50%, -50%);
   height: 250px;
   width: 400px;
@@ -142,8 +142,9 @@ button {
 }
 
 #histories {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
   justify-content: space-around;
 }
 
@@ -151,7 +152,7 @@ button {
   width: 100%;
   height: 100%;
   padding: 50px;
-  display: flex;
+  display: grid;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -185,6 +186,9 @@ button {
   .box-container {
     padding: 0 20px;
     width: 100%;
+  }
+  #histories{
+    grid-template-columns: 1fr;
   }
   .card {
     flex-direction: column;
